Refactored configuration file handling to use `Path` API, introduced `getConfigPath` for dynamic directory resolution, and added unit tests for configurable test directories. Updated dependencies and test configuration.